<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <GVL Name="GVL_GenSysInfo" Id="{63e19513-76f4-4564-b069-1c3f57f4ab63}">
    <Declaration><![CDATA[VAR_GLOBAL
	tMotionSensorsTOF_PT		: TIME := T#5M;
	todGlobalTime				: TOD;
END_VAR

VAR_GLOBAL CONSTANT
	
	byStreetLampsCount			: BYTE := 10;
	byStreetLampsScenesNumber	: BYTE := 40;
	
	//Standard Brightness
	
	c_byBrightness_Alarm	: BYTE := 254;
	c_byBrightness_Motion	: BYTE := 230;
	c_byBrightness_Night	: BYTE := 180;
	c_byBrightness_Day		: BYTE := 0; 
	
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>