<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <POU Name="P_AlarmMode" Id="{1a51715d-33ec-403e-9050-1f3ea69afa82}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_AlarmMode
VAR
	rtAlarm		: R_TRIG;
	ftAlarm		: F_TRIG;
	
	fbPBL		: FB_PBL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//init rising and falling edge detection
rtAlarm(CLK := fbBACnet_BV_Alarm.bPresentValue);
ftAlarm(CLK := fbBACnet_BV_Alarm.bPresentValue);

//if rising edge occured
IF rtAlarm.Q THEN
	
	//reset manual mode
	bBACnet_ResetManual := TRUE;
	
	//then set street lamp levels to c_byBrightness_Alarm level
	fbBACnet_AV_SL_Level_1.fPV  := c_byBrightness_Alarm;
	fbBACnet_AV_SL_Level_2.fPV  := c_byBrightness_Alarm;
	fbBACnet_AV_SL_Level_3.fPV  := c_byBrightness_Alarm;
	fbBACnet_AV_SL_Level_4.fPV  := c_byBrightness_Alarm;
	fbBACnet_AV_SL_Level_5.fPV  := c_byBrightness_Alarm;
	fbBACnet_AV_SL_Level_6.fPV  := c_byBrightness_Alarm;
	fbBACnet_AV_SL_Level_7.fPV  := c_byBrightness_Alarm;
	fbBACnet_AV_SL_Level_8.fPV  := c_byBrightness_Alarm;
	fbBACnet_AV_SL_Level_9.fPV  := c_byBrightness_Alarm;
	fbBACnet_AV_SL_Level_10.fPV := c_byBrightness_Alarm;
	
END_IF

//if falling edge occured
IF ftAlarm.Q THEN
	IF F_IsNight() THEN
		fbBACnet_AV_SL_Level_1.fPV  := c_byBrightness_Night;
		fbBACnet_AV_SL_Level_2.fPV  := c_byBrightness_Night;
		fbBACnet_AV_SL_Level_3.fPV  := c_byBrightness_Night;
		fbBACnet_AV_SL_Level_4.fPV  := c_byBrightness_Night;
		fbBACnet_AV_SL_Level_5.fPV  := c_byBrightness_Night;
		fbBACnet_AV_SL_Level_6.fPV  := c_byBrightness_Night;
		fbBACnet_AV_SL_Level_7.fPV  := c_byBrightness_Night;
		fbBACnet_AV_SL_Level_8.fPV  := c_byBrightness_Night;
		fbBACnet_AV_SL_Level_9.fPV  := c_byBrightness_Night;
		fbBACnet_AV_SL_Level_10.fPV := c_byBrightness_Night;
	ELSE
		fbBACnet_AV_SL_Level_1.fPV  := c_byBrightness_Day;
		fbBACnet_AV_SL_Level_2.fPV  := c_byBrightness_Day;
		fbBACnet_AV_SL_Level_3.fPV  := c_byBrightness_Day;
		fbBACnet_AV_SL_Level_4.fPV  := c_byBrightness_Day;
		fbBACnet_AV_SL_Level_5.fPV  := c_byBrightness_Day;
		fbBACnet_AV_SL_Level_6.fPV  := c_byBrightness_Day;
		fbBACnet_AV_SL_Level_7.fPV  := c_byBrightness_Day;
		fbBACnet_AV_SL_Level_8.fPV  := c_byBrightness_Day;
		fbBACnet_AV_SL_Level_9.fPV  := c_byBrightness_Day;
		fbBACnet_AV_SL_Level_10.fPV := c_byBrightness_Day;
	END_IF
END_IF]]></ST>
    </Implementation>
    <LineIds Name="P_AlarmMode">
      <LineId Id="10" Count="0" />
      <LineId Id="12" Count="2" />
      <LineId Id="11" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="53" Count="1" />
      <LineId Id="51" Count="0" />
      <LineId Id="23" Count="11" />
      <LineId Id="15" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="37" Count="1" />
      <LineId Id="67" Count="8" />
      <LineId Id="65" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="85" Count="8" />
      <LineId Id="77" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="84" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>